--- a/src/login.html
+++ b/src/login.html
@@ -4,7 +4,7 @@
     	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet"> 
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-      <link rel="stylesheet" type="text/css" href="css/signup.css">
+      <link rel="stylesheet" type="text/css" href="css/login.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
@@ -13,17 +13,13 @@
     
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
-
-      <nav id="signup">
-      <div class="container">
-        <div class="nav-wrapper">
-          <a href="#" class="brand-logo"><img src="images/signup/logo.png" height="80px"></a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><div id ="text">WE-LEND COMMUNITY PLATFORM</div></a></li>
-          <ul>
+      
+      <div id="container">
+        <div id="cardcontent">
+          <div id="image"><img src="images/login/logo.png"></div>
+          <div id="form"></div>
         </div>
-      </nav>
-    </div>
+      </div>     
 
     </body>
   </html>
