--- a/src/signup.html
+++ b/src/signup.html
@@ -3,8 +3,8 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/login.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">	
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">  
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> 
+<!-- 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">  
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>  -->
 
 
 	<title>Commugrant Login</title>
@@ -33,8 +33,8 @@
 							are transparent yet super secure
 						</p>
 					</div>	
-					<br><a href="signup.html">
-					<input type="button" class="buttonsign" value="SIGN UP NOW"></a>
+					<br>
+						
 				</div>
 
 			</div>
@@ -43,17 +43,18 @@
 
 				<div class="container70">
 
-					<div id="formtitle">Or Login into your account...</div>
+					<div id="formtitle">CREATE A NEW ACCOUNT...</div>
 					<br><br><br><br>
 
 					<form>
-						<input type="text" id="uname" name="username" placeholder="USERNAME">
-						<input type="text" id="pss" name="password" placeholder="PASSWORD">
+						<input type="text" id="unamesignup" name="usernamesignup" placeholder="SET USERNAME">
+						<input type="text" id="psssignup" name="passsignup" placeholder="SET PASSWORD">
+						<input type="text" id="adhar" name="passsignup" placeholder="ENTER ADHAR CARD NUMBER">
 					</form>
 
 					<br><br><br><br>
 
-					<input type="button" class="buttonlog" value="LOGIN">
+					<input type="button" class="buttonlog" value="SET UP YOUR ACCOUNT">
 
 				</div>
 
