--- a/src/loaninvest.html
+++ b/src/loaninvest.html
@@ -5,7 +5,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">  
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-	<title>Community home</title>
+	<title>INVESTORS</title>
 </head>
 <body>
 	<div id="container">
@@ -16,6 +16,7 @@
 				
 
 				<div id="welcome">INVESTORS</div>
+				
 
 				<div id="paragraph">
 					<p>
