--- a/src/comcreate.html
+++ b/src/comcreate.html
@@ -1,51 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/comcreate.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">	
-	  
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> 
-	<link rel="stylesheet" type="text/css" href="css/materialize.css"> 
+    <link rel="stylesheet" type="text/css" href="css/comcreate.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/materialize.css">
 
 
-	<title>CREATE COMMUNITY</title>
+    <title>CREATE COMMUNITY</title>
 
 </head>
 <body>
-	
-	<div id="upper">
-		<div>
-			<div id="container70">
-				<div id="left"><img src="images/login/logobig.png" height="80px"></div>
-				<div id="right">
-					<input type="button" class="signout" value="SIGN OUT">
-				</div>
-			</div>
-		</div>
 
-		<div id="container72">
-			<form>
-				<h4>ENTER COMMUNITY NAME</h4>
-				<input type="text" id="communityname" name="communityname">
-				<br><br>
-				<h5>DESCRIPTION FOR COMMUNITY</h5>
-				<br><br>
-				<input type="text" id="description" name="description">
-			</form>
-				<br><br><br>
-				<p id="para">The Community Member acknowledges and agrees that all intellectual property rights in the Trade Marks, the Framework and all documents and agree to create a bond which shall be taken from them during apprval of loan and the rating and quality remain good in the name of the lord and the god above us. if you cant pay the loan youre completely FUCKED !!!!! </p>
+<div id="upper">
+    <div>
+        <div id="container70">
+            <div id="left"><img src="images/login/logobig.png" height="80px"></div>
+            <div id="right">
+                <input type="button" class="signout" value="SIGN OUT">
+            </div>
+        </div>
+    </div>
 
-		</div>
-	</div>
+    <div id="container72">
+        <form>
+            <h4>ENTER COMMUNITY NAME</h4>
+            <input type="text" id="communityname" name="communityname">
+            <br><br>
+            <h5>DESCRIPTION FOR COMMUNITY</h5>
+            <br><br>
+            <input type="text" id="description" name="description">
+        </form>
+        <br><br><br>
+        <p id="para">The Community Member acknowledges and agrees that all intellectual property rights in the Trade
+            Marks, the Framework and all documents and agree to create a bond which shall be taken from them during
+            apprval of loan and the rating and quality remain good in the name of the lord and the god above us. if you
+            cant pay the loan youre completely FUCKED !!!!! </p>
 
-	<div id="lower">		
-		<div id="container70">
-			<div id="titlelower"> CREATE NEW COMMUNITY </div>
+    </div>
+</div>
 
-			<div id="go"> GO</div>
-		</div>
-		
-	</div>
+<div id="lower">
+    <div id="container70">
+        <div id="titlelower"> CREATE NEW COMMUNITY</div>
+
+        <div id="go"> GO</div>
+    </div>
+
+</div>
 
 </body>
 </html>
