--- a/src/history.html
+++ b/src/history.html
@@ -24,7 +24,7 @@
 						TRANSACTION HISTORY based on previous grants and returns
 					</p> 
 				</div>
-				<input type="button" class="out" value="SIGN OUT">
+				<input type="button" class="out" value="SIGN OUT" onclick= alert("hello")>
 			</div>
 
 
